<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purpleCute"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profileDetail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        app:srcCompat="@drawable/hearthstone_logo" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/testInfo"
        app:layout_constraintStart_toEndOf="@+id/profileDetail"
        app:layout_constraintTop_toTopOf="@+id/profileDetail" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/testInfo"
        app:layout_constraintStart_toEndOf="@+id/profileDetail"
        app:layout_constraintTop_toTopOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:text="@string/title_profile"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profileEmailChange"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDetail" />

    <EditText
        android:id="@+id/profileNameChange"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailChange"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/profilePasswordChange"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameChange"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/Change1"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/changeDataProfileButton"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="@+id/profileEmailChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileEmailChange"
        app:layout_constraintTop_toTopOf="@+id/profileEmailChange"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/Change2"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/changeDataProfileButton"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="@+id/profileNameChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileNameChange"
        app:layout_constraintTop_toTopOf="@+id/profileNameChange" />

    <Button
        android:id="@+id/Change3"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/changeDataProfileButton"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="@+id/profilePasswordChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePasswordChange"
        app:layout_constraintTop_toTopOf="@+id/profilePasswordChange" />

    <Button
        android:id="@+id/closeSessionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/logOut"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:minHeight="48dp"
        android:text="@string/deleteUser"
        android:textColor="@color/purpleCute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>